--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,12 @@ yt-dlp
 pyromod
 TgCrypto==1.2.5
 pyrogram
-xmltodict 
-requests 
+xmltodict
+requests
 pycryptodomex
+subprocess
+asyncio
+logging
+re
+shutil
+json
